fixed overflow issues at smaller zoom ranges

--- a/Task_2/css/styles.css
+++ b/Task_2/css/styles.css
@@ -397,7 +397,6 @@ footer {
 }
 
 footer hr {
-  transform: scaleX(1.1) scaleY(1);
   background: #000;
   border: none;
   height: 0.1em;
